--- a/HTML/style.css
+++ b/HTML/style.css
@@ -403,7 +403,6 @@ a:hover {
 
     display: inline-block;
     vertical-align: middle;
-    margin-left: 115px;
 }
 
 #labelTitoloComunicazione,
@@ -416,7 +415,6 @@ a:hover {
     font-style: normal;
     font-weight: 300;
     line-height: normal;
-
 }
 
 #TitoloComunicazione {
@@ -509,6 +507,7 @@ a:hover {
     background-color: #004996;
     margin-left: 200px;
     margin-bottom: 1px;
+    visibility: hidden;
 }
 
 #TitoloComunicazione,
